tools/main_stubs.h

int atexit(void (*func)(void));
#define JOE_MSGBUFSIZE 300
 typedef struct b B;
 typedef struct kbd KBD;
struct kmap;
 typedef struct kmap KMAP;
 typedef struct window W;
 typedef struct screen Screen;
 typedef struct bw BW;
 typedef struct cap CAP;
typedef struct watom WATOM;
typedef struct scrn SCRN;
CAP *my_getcap(char *name, long baud, void (*out)(void *outptr, char c), void *outptr);
B *bfind(const char *s);
KBD *mkkbd(KMAP *kmap);
KMAP *kmap_getcontext(const char *name);