src/w.zig

//! Window system — replaces `joe/w.c`.
//!
//! Faithful C-ABI port of JOE's window tree, wfit, create/abort, and
//! message helpers. Generated from a goto-free rewrite of w.c via
//! `zig translate-c`, then cleaned for the hybrid Zig+C build.

const std = @import("std");
const ptrdiff_t = c_long;


pub const FITMIN: c_int = 2;
pub const FITHEIGHT: c_int = 4;
pub const JOE_MSGBUFSIZE: c_int = 300;
pub const TYPETW: c_int = 0x0100;
pub const TYPEPW: c_int = 0x0200;
pub const TYPEMENU: c_int = 0x0800;
pub const TYPEQW: c_int = 0x1000;

pub extern fn printf(fmt: [*c]const u8, ...) c_int;
pub extern fn snprintf(buf: [*c]u8, n: c_ulong, fmt: [*c]const u8, ...) c_int;
pub extern fn getenv(name: [*c]const u8) [*c]u8;
pub extern fn free(p: ?*anyopaque) void;
pub extern fn memcpy(d: ?*anyopaque, s: ?*const anyopaque, n: c_ulong) ?*anyopaque;
pub extern fn memset(s: ?*anyopaque, c: c_int, n: c_ulong) ?*anyopaque;
pub extern fn strcmp(a: [*c]const u8, b: [*c]const u8) c_int;
pub extern fn strlen(s: [*c]const u8) c_ulong;
pub const off_t = i64;
pub const FILE = anyopaque;
pub extern var ITEM: ?*anyopaque;
pub extern var QUEUE: ?*anyopaque;
pub extern var LAST: ?*anyopaque;
pub const struct_b = opaque {
};
pub const B = struct_b;
pub const struct_kbd = extern struct {
    _pad: [88]u8 = std.mem.zeroes([88]u8),
};
pub const KBD = struct_kbd;
pub const struct_kmap = opaque {
};
pub const KMAP = struct_kmap;
pub const struct_bstack = opaque {};
pub const W = struct_window;
const struct_unnamed_1 = extern struct {
    next: [*c]W = null,
    prev: [*c]W = null,
};
pub const struct_scrn = extern struct {
    _pad0: [8]u8 = std.mem.zeroes([8]u8),
    li: ptrdiff_t = 0,
    co: ptrdiff_t = 0,
    _pad1: [760]u8 = std.mem.zeroes([760]u8),
    updtab: [*c]c_int = null,
    _pad2: [48]u8 = std.mem.zeroes([48]u8),
};
pub const SCRN = struct_scrn;
pub const struct_screen = extern struct {
    t: [*c]SCRN = null,
    wind: ptrdiff_t = 0,
    topwin: [*c]W = null,
    curwin: [*c]W = null,
    w: ptrdiff_t = 0,
    h: ptrdiff_t = 0,
};
pub const Screen = struct_screen;
pub const struct_watom = extern struct {
    context: [*c]const u8 = null,
    disp: ?*const fn (w: [*c]W, flg: c_int) callconv(.c) void = null,
    follow: ?*const fn (w: [*c]W) callconv(.c) void = null,
    abort: ?*const fn (w: [*c]W) callconv(.c) c_int = null,
    rtn: ?*const fn (w: [*c]W) callconv(.c) c_int = null,
    type: ?*const fn (w: [*c]W, k: c_int) callconv(.c) c_int = null,
    resize: ?*const fn (w: [*c]W, width: ptrdiff_t, height: ptrdiff_t) callconv(.c) void = null,
    move: ?*const fn (w: [*c]W, x: ptrdiff_t, y: ptrdiff_t) callconv(.c) void = null,
    ins: ?*const fn (w: [*c]W, b: ?*B, l: off_t, n: off_t, flg: c_int) callconv(.c) void = null,
    del: ?*const fn (w: [*c]W, b: ?*B, l: off_t, n: off_t, flg: c_int) callconv(.c) void = null,
    what: c_int = 0,
};
pub const WATOM = struct_watom;
pub const struct_window = extern struct {
    link: struct_unnamed_1 = std.mem.zeroes(struct_unnamed_1),
    t: [*c]Screen = null,
    x: ptrdiff_t = 0,
    y: ptrdiff_t = 0,
    w: ptrdiff_t = 0,
    h: ptrdiff_t = 0,
    ny: ptrdiff_t = 0,
    nh: ptrdiff_t = 0,
    reqh: ptrdiff_t = 0,
    fixed: ptrdiff_t = 0,
    hh: ptrdiff_t = 0,
    win: [*c]W = null,
    main: [*c]W = null,
    orgwin: [*c]W = null,
    curx: ptrdiff_t = 0,
    cury: ptrdiff_t = 0,
    kbd: [*c]KBD = null,
    watom: [*c]const WATOM = null,
    object: ?*anyopaque = null,
    msgt: [*c]const u8 = null,
    msgb: [*c]const u8 = null,
    huh: [*c]const u8 = null,
    notify: [*c]c_int = null,
    bstack: ?*struct_bstack = null,
};
pub const struct_bw = extern struct {
    parent: [*c]W = null,
    b: ?*B = null,
    _pad: [472]u8 = std.mem.zeroes([472]u8),
};
pub const BW = struct_bw;
pub extern fn joe_malloc(size: ptrdiff_t) ?*anyopaque;
pub extern fn joe_free(ptr: ?*anyopaque) void;
pub extern fn msetI(d: ?*anyopaque, c: c_int, sz: ptrdiff_t) ?*anyopaque;
pub extern fn diff_min(a: ptrdiff_t, b: ptrdiff_t) ptrdiff_t;
pub extern fn nscrldn(t: [*c]SCRN, top: ptrdiff_t, bot: ptrdiff_t, amnt: ptrdiff_t) void;
pub extern fn nscrlup(t: [*c]SCRN, top: ptrdiff_t, bot: ptrdiff_t, amnt: ptrdiff_t) void;
pub extern fn nredraw(t: [*c]SCRN) void;
pub extern fn fmtlen(s: [*c]const u8) ptrdiff_t;
pub extern fn genfmt(t: [*c]SCRN, x: ptrdiff_t, y: ptrdiff_t, ofst: ptrdiff_t, s: [*c]const u8, flg: c_int, trunc: c_int, atr: c_int) void;
pub extern fn mkkbd(kmap: ?*KMAP) [*c]KBD;
pub extern fn rmkbd(k: [*c]KBD) void;
pub extern fn kmap_getcontext(name: [*c]const u8) ?*KMAP;
pub extern fn windie(w: [*c]W) void;
pub extern fn usplitw(w: [*c]W, k: c_int) c_int;
pub extern fn get_buffer_in_window(bw: [*c]BW, b: ?*B) c_int;
pub extern fn bfind(s: [*c]const u8) ?*B;
pub extern fn my_gettext(s: [*c]const u8) [*c]const u8;
pub extern var skiptop: c_int;
pub extern var dostaupd: c_int;
pub extern var leave: c_int;
pub extern var maint: [*c]Screen;
pub extern var staen: c_int;
pub extern var watomtw: WATOM;
pub extern var errbuf: ?*B;
pub export fn wfit(arg_t: [*c]Screen) void {
    var t = arg_t;
    _ = &t;
    var y: ptrdiff_t = undefined;
    _ = &y;
    var left: ptrdiff_t = undefined;
    _ = &left;
    var w: [*c]W = undefined;
    _ = &w;
    var pw: [*c]W = undefined;
    _ = &pw;
    var req: ptrdiff_t = undefined;
    _ = &req;
    var adj: ptrdiff_t = undefined;
    _ = &adj;
    var flg: c_int = undefined;
    _ = &flg;
    var ret: c_int = undefined;
    _ = &ret;
    dostaupd = 1;
    while (true) {
        flg = 0;
        y = t.*.wind;
        left = t.*.h - y;
        pw = null;
        w = t.*.topwin;
        while (true) {
            w.*.ny = -@as(c_int, 1);
            w.*.nh = geth(w);
            w = w.*.link.next;
            if (!(w != t.*.topwin)) break;
        }
        w = t.*.topwin;
        while (true) {
            req = getgrouph(w);
            if (req > left) {
                adj = req - left;
            } else {
                adj = 0;
            }
            while (true) {
                w.*.ny = y;
                if (!(w.*.win != null)) {
                    pw = w;
                    w.*.nh -= adj;
                }
                if (!(w.*.win != null) and ((w.*.nh < @as(ptrdiff_t, 0)) or ((w == t.*.curwin) and (w.*.nh < @as(ptrdiff_t, 1))))) while (((w.*.nh < @as(ptrdiff_t, 0)) or ((w == t.*.curwin) and (w.*.nh < @as(ptrdiff_t, 1)))) and (w.*.link.next.*.win != null)) {
                    w.*.nh += doabort(w.*.link.next, &ret);
                };
                if (w == t.*.curwin) {
                    flg = 1;
                }
                y += w.*.nh;
                left -= w.*.nh;
                w = w.*.link.next;
                if (!((w != t.*.topwin) and (w.*.main == w.*.link.prev.*.main))) break;
            }
            if (!((w != t.*.topwin) and (left >= @as(ptrdiff_t, FITHEIGHT)))) break;
        }
        pw.*.nh += left;
        while ((blk: {
            const tmp = pw.*.link.next;
            pw = tmp;
            break :blk tmp;
        }) != w) {
            pw.*.ny += left;
        }
        if (!(flg != 0)) {
            t.*.topwin = findbotw(t.*.topwin).*.link.next;
            continue;
        }
        break;
    }
    w = t.*.topwin;
    while (true) {
        if ((w.*.y >= @as(ptrdiff_t, 0)) and (w.*.ny >= @as(ptrdiff_t, 0))) if (w.*.ny > w.*.y) {
            var l: [*c]W = blk: {
                const tmp = w;
                pw = tmp;
                break :blk tmp;
            };
            _ = &l;
            while ((pw.*.link.next != t.*.topwin) and (((pw.*.link.next.*.y < @as(ptrdiff_t, 0)) or (pw.*.link.next.*.ny < @as(ptrdiff_t, 0))) or (pw.*.link.next.*.ny > pw.*.link.next.*.y))) {
                pw = pw.*.link.next;
                if ((pw.*.ny >= @as(ptrdiff_t, 0)) and (pw.*.y >= @as(ptrdiff_t, 0))) {
                    l = pw;
                }
            }
            while (true) {
                if ((l.*.ny >= @as(ptrdiff_t, 0)) and (l.*.y >= @as(ptrdiff_t, 0))) {
                    nscrldn(t.*.t, l.*.y, l.*.ny + diff_min(l.*.h, l.*.nh), l.*.ny - l.*.y);
                }
                if (w == l) break;
                l = l.*.link.prev;
            }
            w = pw.*.link.next;
        } else if (w.*.ny < w.*.y) {
            var l: [*c]W = blk: {
                const tmp = w;
                pw = tmp;
                break :blk tmp;
            };
            _ = &l;
            while ((pw.*.link.next != t.*.topwin) and (((pw.*.link.next.*.y < @as(ptrdiff_t, 0)) or (pw.*.link.next.*.ny < @as(ptrdiff_t, 0))) or (pw.*.link.next.*.ny < pw.*.link.next.*.y))) {
                pw = pw.*.link.next;
                if ((pw.*.ny >= @as(ptrdiff_t, 0)) and (pw.*.y >= @as(ptrdiff_t, 0))) {
                    l = pw;
                }
            }
            while (true) {
                if ((w.*.ny >= @as(ptrdiff_t, 0)) and (w.*.y >= @as(ptrdiff_t, 0))) {
                    nscrlup(t.*.t, w.*.ny, w.*.y + diff_min(w.*.h, w.*.nh), w.*.y - w.*.ny);
                }
                if (w == l) break;
                w = w.*.link.next;
            }
            w = pw.*.link.next;
        } else {
            w = w.*.link.next;
        } else {
            w = w.*.link.next;
        }
        if (!(w != t.*.topwin)) break;
    }
    w = t.*.topwin;
    while (true) {
        if (w.*.ny >= @as(ptrdiff_t, 0)) {
            if (w.*.y == @as(ptrdiff_t, -@as(c_int, 1))) {
                _ = msetI(@ptrCast(@alignCast(t.*.t.*.updtab + @as(usize, @bitCast(@as(isize, @intCast(w.*.ny)))))), 1, w.*.nh);
            }
            w.*.y = w.*.ny;
        } else {
            w.*.y = -@as(c_int, 1);
        }
        w.*.h = w.*.nh;
        w.*.reqh = 0;
        w = w.*.link.next;
        if (!(w != t.*.topwin)) break;
    }
    w = t.*.topwin;
    while (true) {
        if (w.*.y >= @as(ptrdiff_t, 0)) {
            if (w.*.object != null) {
                if (w.*.watom.*.move != null) {
                    w.*.watom.*.move.?(w, w.*.x, w.*.y);
                }
                if (w.*.watom.*.resize != null) {
                    w.*.watom.*.resize.?(w, w.*.w, w.*.h);
                }
            }
        }
        w = w.*.link.next;
        if (!(w != t.*.topwin)) break;
    }
}
pub export fn updall() void {
    var y: c_int = undefined;
    _ = &y;
    {
        y = 0;
        while (@as(ptrdiff_t, y) != scr.*.h) : (y += 1) {
            scr.*.t.*.updtab[@bitCast(@as(isize, @intCast(y)))] = 1;
        }
    }
}
pub export fn wshrink(arg_w: [*c]W) c_int {
    var w = arg_w;
    _ = &w;
    var nextw: [*c]W = undefined;
    _ = &nextw;
    if (((w.*.link.next == w.*.t.*.topwin) or (w.*.link.next.*.y == @as(ptrdiff_t, -@as(c_int, 1)))) and (w != w.*.t.*.topwin)) return wgrow(w.*.link.prev.*.main);
    if (w.*.h <= @as(ptrdiff_t, FITHEIGHT)) return -@as(c_int, 1);
    {
        nextw = w.*.link.next;
        while ((@as(ptrdiff_t, @intFromBool(nextw != w.*.t.*.topwin)) != 0) and (nextw.*.fixed != 0)) : (nextw = nextw.*.link.next) {}
    }
    if (nextw == w.*.t.*.topwin) return -@as(c_int, 1);
    seth(w, w.*.h - @as(ptrdiff_t, 1));
    seth(nextw, nextw.*.h + @as(ptrdiff_t, 1));
    wfit(w.*.t);
    return 0;
}
pub export fn wgrow(arg_w: [*c]W) c_int {
    var w = arg_w;
    _ = &w;
    var nextw: [*c]W = undefined;
    _ = &nextw;
    if (((w.*.link.next == w.*.t.*.topwin) or (w.*.link.next.*.y == @as(ptrdiff_t, -@as(c_int, 1)))) and (w != w.*.t.*.topwin)) return wshrink(w.*.link.prev.*.main);
    {
        nextw = w.*.link.next;
        while ((nextw.*.fixed != 0) and (@as(ptrdiff_t, @intFromBool(nextw != w.*.t.*.topwin)) != 0)) : (nextw = nextw.*.link.next) {}
    }
    if (((nextw == w.*.t.*.topwin) or (nextw.*.y == @as(ptrdiff_t, -@as(c_int, 1)))) or (nextw.*.h <= @as(ptrdiff_t, FITHEIGHT))) return -@as(c_int, 1);
    seth(w, w.*.h + @as(ptrdiff_t, 1));
    seth(nextw, nextw.*.h - @as(ptrdiff_t, 1));
    wfit(w.*.t);
    return 0;
}
